# ai-personal-accountant

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fly.toml  pyproject.toml
experiment/: nb.ipynb
src/: .env.example
src/personal_accountant/: agent.py  model.py  prompt.py
src/personal_accountant/sub_agents/spend_extractor/: agent.py  prompt.py
src/personal_accountant/sub_agents/spend_retriever/: agent.py  prompt.py
src/personal_accountant/tools/: database.py
src/personal_accountant/types/: type.py
